--- a/index.html
+++ b/index.html
@@ -53,18 +53,22 @@
         <div class="p-home-sidebar">
           <nav class="p-home-nav">
             <span class="p-home-text">dsys1100</span>
-            <span class="p-home-text01">Домашняя</span>
+            <span class="p-home-text001">Домашняя</span>
             <a href="p2-proj.html" class="p-home-navlink">Мои проекты</a>
-            <span class="p-home-text02">t̷̎ͅe̛͇ͭs̼̚͢t̡̝͕̎̾͠ ͭ̀͜͏̮͎b̧̖̯͂̊̕u̟͔̙̐̎͂͘͜͢t̨̖̙̹̿͗ͮ͘͡t̸̙͚͈ͪͤ͆͘͝o̴͕͕̭͔͊̀́̚͘͟͞n̴̷͛ͭ̈ͮ͏̻͈͙̯͢</span>
+            <span class="p-home-text002">t̷̎ͅe̛͇ͭs̼̚͢t̡̝͕̎̾͠ ͭ̀͜͏̮͎b̧̖̯͂̊̕u̟͔̙̐̎͂͘͜͢t̨̖̙̹̿͗ͮ͘͡t̸̙͚͈ͪͤ͆͘͝o̴͕͕̭͔͊̀́̚͘͟͞n̴̷͛ͭ̈ͮ͏̻͈͙̯͢</span>
           </nav>
         </div>
         <div class="p-home-features">
-          <div class="p-home-container1">
+          <div class="p-home-container01">
             <div class="p-home-main">
-              <img alt="image" src="public/suprised.svg" class="p-home-image" />
-              <div class="p-home-container2">
+              <img
+                alt="image"
+                src="public/user-svgrepo-com.svg"
+                class="p-home-image"
+              />
+              <div class="p-home-container02">
                 <h2 class="p-home-heading">Главное</h2>
-                <span class="p-home-text03">
+                <span class="p-home-text003">
                   <span>Стример, Windows сборщик, просто chel.</span>
                   <br />
                   <br />
@@ -84,75 +88,293 @@
               </div>
             </div>
             <div class="p-home-pc">
-              <img alt="image" src="public/monitor.svg" class="p-home-image1" />
-              <div class="p-home-container3">
-                <h2 class="p-home-text19">Комп(ы)</h2>
-                <span class="p-home-text20">
-                  <span class="p-home-text21">AeroCool ECO-450W</span>
-                  <br class="p-home-text22" />
-                  <span class="p-home-text23">Gigabyte H410M H V3</span>
-                  <br class="p-home-text24" />
-                  <span class="p-home-text25">Intel Core i3-10100F BOX</span>
-                  <br class="p-home-text26" />
-                  <span class="p-home-text27">
+              <img
+                alt="image"
+                src="public/monitor-svgrepo-com.svg"
+                class="p-home-image01"
+              />
+              <div class="p-home-container03">
+                <h2 class="p-home-text019">Комп(ы)</h2>
+                <span class="p-home-text020">
+                  <span class="p-home-text021">AeroCool ECO-450W</span>
+                  <br class="p-home-text022" />
+                  <span class="p-home-text023">Gigabyte H410M H V3</span>
+                  <br class="p-home-text024" />
+                  <span class="p-home-text025">Intel Core i3-10100F BOX</span>
+                  <br class="p-home-text026" />
+                  <span class="p-home-text027">
                     MSI NVIDIA GeForce GTX 1050 Ti
                   </span>
-                  <br class="p-home-text28" />
-                  <span class="p-home-text29">KingSpec 16GB DDR4 3200 MHz</span>
-                  <br class="p-home-text30" />
-                  <span class="p-home-text31">SSD KingSpec 256GB</span>
-                  <br class="p-home-text32" />
-                  <span class="p-home-text33">HDD 2.5" HGST 500GB</span>
-                  <br class="p-home-text34" />
-                  <span class="p-home-text35">PowerCase Alisio Micro X4B</span>
-                  <br class="p-home-text36" />
-                  <br class="p-home-text37" />
-                  <span class="p-home-text38">Ноутбук Lenovo B570e:</span>
-                  <br class="p-home-text39" />
-                  <span class="p-home-text40">Intel Core i3-2350M</span>
-                  <br class="p-home-text41" />
-                  <span class="p-home-text42">Intel HD Graphics 3000</span>
-                  <br class="p-home-text43" />
-                  <span class="p-home-text44">6gb xz</span>
-                  <br class="p-home-text45" />
-                  <span class="p-home-text46">SSD 256</span>
-                  <br class="p-home-text47" />
-                  <span class="p-home-text48">HDD 2.5</span>
+                  <br class="p-home-text028" />
+                  <span class="p-home-text029">
+                    KingSpec 16GB DDR4 3200 MHz
+                  </span>
+                  <br class="p-home-text030" />
+                  <span class="p-home-text031">SSD KingSpec 256GB</span>
+                  <br class="p-home-text032" />
+                  <span class="p-home-text033">HDD 2.5" HGST 500GB</span>
+                  <br class="p-home-text034" />
+                  <span class="p-home-text035">PowerCase Alisio Micro X4B</span>
+                  <br class="p-home-text036" />
+                  <br class="p-home-text037" />
+                  <span class="p-home-text038">Ноутбук Lenovo B570e:</span>
+                  <br class="p-home-text039" />
+                  <span class="p-home-text040">Intel Core i3-2350M</span>
+                  <br class="p-home-text041" />
+                  <span class="p-home-text042">Intel HD Graphics 3000</span>
+                  <br class="p-home-text043" />
+                  <span class="p-home-text044">Nanya 4GB DDR3 1333MHz</span>
+                  <br class="p-home-text045" />
+                  <span class="p-home-text046">Samsung 2GB DDR3L 1600MHz</span>
+                  <br class="p-home-text047" />
+                  <span>SSD Apacer 256GB</span>
+                  <br class="p-home-text049" />
+                  <span>HDD Seagate 320GB</span>
                   <br />
                 </span>
               </div>
             </div>
             <div class="p-home-phone">
-              <img alt="image" src="public/phone.svg" class="p-home-image2" />
-              <div class="p-home-container4">
-                <h2 class="p-home-text50">Телефон(ы)</h2>
-                <span class="p-home-text51">
-                  <span class="p-home-text52">Redmi Note 9 Pro 6/128</span>
-                  <br class="p-home-text53" />
-                  <span class="p-home-text54">miui13a12_greeshan_repack</span>
-                  <br class="p-home-text55" />
-                  <br class="p-home-text56" />
-                  <span class="p-home-text57">Redmi Note 4 snap 3/32</span>
-                  <br class="p-home-text58" />
-                  <span class="p-home-text59">
+              <img
+                alt="image"
+                src="public/screen-smartphone-svgrepo-com.svg"
+                class="p-home-image02"
+              />
+              <div class="p-home-container04">
+                <h2 class="p-home-text052">Телефон(ы)</h2>
+                <span class="p-home-text053">
+                  <span class="p-home-text054">Redmi Note 9 Pro 6/128</span>
+                  <br class="p-home-text055" />
+                  <span class="p-home-text056">miui13a12_greeshan_repack</span>
+                  <br class="p-home-text057" />
+                  <br class="p-home-text058" />
+                  <span class="p-home-text059">Redmi Note 4 snap 3/32</span>
+                  <br class="p-home-text060" />
+                  <span class="p-home-text061">
                     miui12.5a10_el13_dsys1100repack
                   </span>
-                  <br class="p-home-text60" />
-                  <br class="p-home-text61" />
-                  <span class="p-home-text62">Lumia 950 3/32</span>
-                  <br class="p-home-text63" />
-                  <span class="p-home-text64">
+                  <br class="p-home-text062" />
+                  <br class="p-home-text063" />
+                  <span class="p-home-text064">Lumia 950 3/32</span>
+                  <br class="p-home-text065" />
+                  <span class="p-home-text066">
                     win10mobile+win11_lite_dsys1100
                   </span>
-                  <br class="p-home-text65" />
-                  <br class="p-home-text66" />
-                  <span class="p-home-text67">iPhone 4</span>
-                  <br class="p-home-text68" />
-                  <span class="p-home-text69">iOS 7.1.2 (no jailbreak)</span>
+                  <br class="p-home-text067" />
+                  <br class="p-home-text068" />
+                  <span class="p-home-text069">iPhone 4</span>
+                  <br class="p-home-text070" />
+                  <span class="p-home-text071">iOS 7.1.2 (no jailbreak)</span>
                   <br />
                 </span>
               </div>
             </div>
+          </div>
+          <div class="p-home-container05">
+            <a
+              href="https://www.youtube.com/@dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-yt1">
+                <img
+                  alt="image"
+                  src="public/youtube-svgrepo-com.svg"
+                  class="p-home-image03"
+                />
+                <div class="p-home-container06">
+                  <h2 class="p-home-text073">YouTube Канал 1</h2>
+                  <span class="p-home-text074">
+                    <span>
+                      Основной ютуб канал со стримами, возможно видосами.
+                    </span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://www.youtube.com/@dsys1100_testing"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-yt2">
+                <img
+                  alt="image"
+                  src="public/youtube-svgrepo-com.svg"
+                  class="p-home-image04"
+                />
+                <div class="p-home-container07">
+                  <h2 class="p-home-text077">YouTube Канал 2</h2>
+                  <span class="p-home-text078">
+                    <span>
+                      Второй канал для тестов и стримов во время бана основного.
+                    </span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://www.twitch.tv/dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-twitch">
+                <img
+                  alt="image"
+                  src="public/twitch-icon.svg"
+                  class="p-home-image05"
+                />
+                <div class="p-home-container08">
+                  <h2 class="p-home-text081">Twitch</h2>
+                  <span class="p-home-text082">
+                    <span>Рестрим с Ютуба, все просто).</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://twitter.com/dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-twitter">
+                <img
+                  alt="image"
+                  src="public/logo_of_twitter.svg"
+                  class="p-home-image06"
+                />
+                <div class="p-home-container09">
+                  <h2 class="p-home-text085">Twitter</h2>
+                  <span class="p-home-text086">
+                    <span>По приколу, постов нет).</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://instagram.com/username_dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-inst">
+                <img
+                  alt="image"
+                  src="public/instagram.svg"
+                  class="p-home-image07"
+                />
+                <div class="p-home-container10">
+                  <h2 class="p-home-text089">Instagram</h2>
+                  <span class="p-home-text090">
+                    <span>Закрытый аккаунт без меня, только закаты.</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://vk.com/dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-vk">
+                <img
+                  alt="image"
+                  src="public/vk_compact_logo_(2021-present).svg"
+                  class="p-home-image08"
+                />
+                <div class="p-home-container11">
+                  <h2 class="p-home-text093">ВКонтакте</h2>
+                  <span class="p-home-text094">
+                    <span>Юзаю для сообщений и музыки, ЛС открыто.</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://t.me/dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-tg">
+                <img
+                  alt="image"
+                  src="public/telegram_logo.svg"
+                  class="p-home-image09"
+                />
+                <div class="p-home-container12">
+                  <h2 class="p-home-text097">Telegram</h2>
+                  <span class="p-home-text098">
+                    <span>Закрытый аккаунт без меня, только закаты.</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://discord.com/users/690945624740462613"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-ds1">
+                <img
+                  alt="image"
+                  src="public/discord-icon-svgrepo-com.svg"
+                  class="p-home-image10"
+                />
+                <div class="p-home-container13">
+                  <h2 class="p-home-text101">Discord Я</h2>
+                  <span class="p-home-text102">
+                    <span>Можно связаться.</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://discord.gg/DbFpfdvEcG"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-ds2">
+                <img
+                  alt="image"
+                  src="public/discord-icon-svgrepo-com.svg"
+                  class="p-home-image11"
+                />
+                <div class="p-home-container14">
+                  <h2 class="p-home-text105">Discord Сервер</h2>
+                  <span class="p-home-text106">
+                    <span>Он есть, но ему 100 лет и он давно мёртв.</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
+            <a
+              href="https://donationalerts.com/r/dsys1100"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              <div class="p-home-da">
+                <img
+                  alt="image"
+                  src="public/da_alert_color.svg"
+                  class="p-home-image12"
+                />
+                <div class="p-home-container15">
+                  <h2 class="p-home-text109">Donation Alerts</h2>
+                  <span class="p-home-text110">
+                    <span>Можно дать мне денег.</span>
+                    <br />
+                  </span>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
