--- a/p2-proj.html
+++ b/p2-proj.html
@@ -61,7 +61,11 @@
         <div class="p-proj-features">
           <div class="p-proj-container1">
             <div class="p-proj-windows">
-              <img alt="image" src="public/ms.svg" class="p-proj-image" />
+              <img
+                alt="image"
+                src="public/windows-svgrepo-com.svg"
+                class="p-proj-image"
+              />
               <div class="p-proj-container2">
                 <h2 class="p-proj-heading">Сборки Windows</h2>
                 <span class="p-proj-text04">
@@ -124,7 +128,7 @@
               <div class="p-proj-cursors">
                 <img
                   alt="image"
-                  src="public/cursor.svg"
+                  src="public/cursor-svgrepo-com.svg"
                   class="p-proj-image1"
                 />
                 <div class="p-proj-container3">
@@ -150,7 +154,7 @@
               <div class="p-proj-mido">
                 <img
                   alt="image"
-                  src="public/android.svg"
+                  src="public/android-svgrepo-com.svg"
                   class="p-proj-image3"
                 />
                 <div class="p-proj-rn4">
@@ -190,18 +194,24 @@
             </div>
             <div class="p-proj-third-column">
               <div class="p-proj-this-site">
-                <img alt="image" src="public/fire.svg" class="p-proj-image4" />
+                <img
+                  alt="image"
+                  src="public/fire-svgrepo-com.svg"
+                  class="p-proj-image4"
+                />
                 <a href="p3-about.html" class="p-proj-navlink button">
                   Этот сайт). О нём здесь
                 </a>
               </div>
               <div class="p-proj-dalshe">
-                <img alt="image" src="public/fire.svg" class="p-proj-image5" />
+                <img
+                  alt="image"
+                  src="public/fire-svgrepo-com.svg"
+                  class="p-proj-image5"
+                />
                 <div class="p-proj-container6">
                   <h2 class="p-proj-text21">Еще</h2>
-                  <span class="p-proj-text22">
-                    Пока на этом всё, ожидайте новые проекты)
-                  </span>
+                  <span>Пока на этом всё, ожидайте новые проекты)</span>
                 </div>
               </div>
             </div>
