--- a/p3-about.html
+++ b/p3-about.html
@@ -77,10 +77,8 @@
           <div class="p-about-container1">
             <div class="p-about-first-alpha">
               <h2 class="p-about-heading1">
-                <span class="p-about-text09">
-                  010101 - 29.04.23 - Первая альфа
-                </span>
-                <br class="p-about-text10" />
+                <span>010101 - 29.04.23 - Первая альфа</span>
+                <br />
               </h2>
               <span class="p-about-text11">
                 От наброска до первой версии. Изучение конструктора сайтов
@@ -91,7 +89,7 @@
             <div class="p-about-second-beta">
               <h2 class="p-about-heading2">
                 <span>010102 - 30.04.23 - Первая бета</span>
-                <br class="p-about-text13" />
+                <br />
               </h2>
               <span class="p-about-text14">
                 Изменил иконки, сместил весь текст, добавил test button и
@@ -110,6 +108,15 @@
               <span class="p-about-text16">
                 Изменены папки и файлы сайта, добавлен ченжлог и некоторая
                 информация по сайту, выход в свет по адресу dsys1100.github.io
+              </span>
+            </div>
+            <div class="p-about-fiveth-icons-links">
+              <h2 class="p-about-heading5">
+                010202 - 07.07.23&nbsp; - МикроИзменения
+              </h2>
+              <span class="p-about-text17">
+                Изменены иконки, добавлены недостающие хар-ки ноута и ссылки на
+                меня.
               </span>
             </div>
           </div>
