--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>dsys1100 site - Home</title>
-    <meta property="og:title" content="dsys1100 site - Home" />
+    <title>dsys1100 site</title>
+    <meta property="og:title" content="dsys1100 site" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -309,7 +309,7 @@
                 <div class="p-home-container12">
                   <h2 class="p-home-text097">Telegram</h2>
                   <span class="p-home-text098">
-                    <span>Закрытый аккаунт без меня, только закаты.</span>
+                    <span>Можно связаться.</span>
                     <br />
                   </span>
                 </div>
