--- a/p2-proj-ru.html
+++ b/p2-proj-ru.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>dsys1100 site - Projects</title>
-    <meta property="og:title" content="dsys1100 site - Projects" />
+    <title>p2-proj-RU - dsys1100 site</title>
+    <meta property="og:title" content="p2-proj-RU - dsys1100 site" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,41 +47,50 @@
   </head>
   <body>
     <div>
-      <link href="./p2-proj.css" rel="stylesheet" />
+      <link href="./p2-proj-ru.css" rel="stylesheet" />
 
-      <div class="p-proj-container">
-        <div class="p-proj-sidebar">
-          <nav class="p-proj-nav">
-            <span class="p-proj-text">dsys1100</span>
-            <a href="index.html" class="p-proj-text01">Домашняя</a>
-            <span class="p-proj-text02">Мои проекты</span>
-            <span class="p-proj-text03">t̷̎ͅe̛͇ͭs̼̚͢t̡̝͕̎̾͠ ͭ̀͜͏̮͎b̧̖̯͂̊̕u̟͔̙̐̎͂͘͜͢t̨̖̙̹̿͗ͮ͘͡t̸̙͚͈ͪͤ͆͘͝o̴͕͕̭͔͊̀́̚͘͟͞n̴̷͛ͭ̈ͮ͏̻͈͙̯͢</span>
+      <div class="p2proj-ru-container">
+        <div class="p2proj-ru-sidebar">
+          <nav class="p2proj-ru-nav">
+            <span class="p2proj-ru-text">dsys1100</span>
+            <a href="index.html" class="p2proj-ru-text01">Домашняя</a>
+            <span class="p2proj-ru-text02">Мои проекты</span>
+            <a href="p2-proj-en.html" class="p2proj-ru-navlink">
+              <span>EN Version</span>
+              <br />
+            </a>
+            <span class="p2proj-ru-text05">t̷̎ͅe̛͇ͭs̼̚͢t̡̝͕̎̾͠ ͭ̀͜͏̮͎b̧̖̯͂̊̕u̟͔̙̐̎͂͘͜͢t̨̖̙̹̿͗ͮ͘͡t̸̙͚͈ͪͤ͆͘͝o̴͕͕̭͔͊̀́̚͘͟͞n̴̷͛ͭ̈ͮ͏̻͈͙̯͢</span>
           </nav>
         </div>
-        <div class="p-proj-features">
-          <div class="p-proj-container1">
-            <div class="p-proj-windows">
+        <div class="p2proj-ru-features">
+          <div class="p2proj-ru-container1">
+            <div class="p2proj-ru-windows">
               <img
                 alt="image"
                 src="public/windows-svgrepo-com.svg"
-                class="p-proj-image"
+                class="p2proj-ru-image"
               />
-              <div class="p-proj-container2">
-                <h2 class="p-proj-heading">Сборки Windows</h2>
-                <span class="p-proj-text04">
+              <div class="p2proj-ru-container2">
+                <h2 class="p2proj-ru-heading">Сборки Windows</h2>
+                <span class="p2proj-ru-text06">
                   <span>Большинство сборок комплектуются сборкой WinPE</span>
                   <br />
                   <span>Основной язык - русский</span>
                   <br />
                 </span>
-                <button class="p-proj-button button">
+                <a
+                  href="https://mega.nz/folder/IGA1xAaJ#A9TXDs919Dc-7YH3EbH-gA"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="p2proj-ru-button button"
+                >
                   Minimal PE10x64 19041.572
-                </button>
+                </a>
                 <a
                   href="https://mega.nz/folder/0LAWEBaB#a51NzSRH38tE1bp0mrOo4g"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="p-proj-button01 button"
+                  class="p2proj-ru-button01 button"
                 >
                   W11 Pro 22H2 22621.1344 Lite
                 </a>
@@ -89,7 +98,7 @@
                   href="https://mega.nz/folder/VW5CHSxZ#nR3W960r1Xe2MXPdK7Z1Ag"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="p-proj-button02 button"
+                  class="p2proj-ru-button02 button"
                 >
                   W11 Pro RTM 22k1641 Lite
                 </a>
@@ -97,70 +106,105 @@
                   href="https://mega.nz/folder/YCZw1JSa#5Ym3TphFSz1qtHfNTqrsPQ"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="p-proj-button03 button"
+                  class="p2proj-ru-button03 button"
                 >
                   W10x64 LTSC&nbsp;19044.1288 Lite
                 </a>
-                <button class="p-proj-button04 button">
-                  W8.1x64 EmbIndPro Lite (no iso)
-                </button>
-                <span class="p-proj-text09">Старые</span>
+                <a
+                  href="https://mega.nz/folder/tDgmwB7T#m1sUrcKpOvaxwwEbeDHAaw"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="p2proj-ru-button04 button"
+                >
+                  W8.1x64 EmbIndPro Lite
+                </a>
+                <span class="p2proj-ru-text11">Старые</span>
                 <a
                   href="https://mega.nz/folder/ULZRXbQY#Vq_OIUUUBbruX4xJePqLoA"
                   target="_blank"
                   rel="noreferrer noopener"
-                  class="p-proj-button05 button"
+                  class="p2proj-ru-button05 button"
                 >
                   W11 Pro 21996 Lite (EN ONLY)
                 </a>
-                <button class="p-proj-button06 button">
-                  W10x64 LTSB Micro
-                </button>
-                <button class="p-proj-button07 button">
-                  W8x64 Pro 9200 MD
-                </button>
-                <button class="p-proj-button08 button">
-                  W8x64 Pro 8400 MD
-                </button>
+                <a
+                  href="https://mega.nz/folder/Mf4TQKjD#AGJ0uY1WPxipcU3NWhzWIg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="p2proj-ru-button06 button"
+                >
+                  W10x64 LTSB Micro (My)
+                </a>
+                <a
+                  href="https://mega.nz/folder/ce4jTTAC#NfnpuEXMRLSBJsY4V-mc8w"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="p2proj-ru-button07 button"
+                >
+                  W10x64 LTSB Micro (Flibustier&amp;My)
+                </a>
+                <a
+                  href="https://mega.nz/folder/lX5XXTBI#jgTIU1yXsoC_jN81Xkr3xg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="p2proj-ru-button08 button"
+                >
+                  W8.0x64 Pro 9200 MD
+                </a>
+                <a
+                  href="https://mega.nz/folder/lPI0wLZB#Kr7BUvzQ6_F8PZYr_JYCtg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="p2proj-ru-button09 button"
+                >
+                  W8.0x64 Pro 8400 MD
+                </a>
               </div>
             </div>
-            <div class="p-proj-second-column">
-              <div class="p-proj-cursors">
+            <div class="p2proj-ru-second-column">
+              <div class="p2proj-ru-cursors">
                 <img
                   alt="image"
                   src="public/cursor-svgrepo-com.svg"
-                  class="p-proj-image1"
+                  class="p2proj-ru-image1"
                 />
-                <div class="p-proj-container3">
-                  <div class="p-proj-container4">
-                    <h2 class="p-proj-text10">Курсоры для Windows</h2>
-                    <span class="p-proj-text11">
+                <div class="p2proj-ru-container3">
+                  <div class="p2proj-ru-container4">
+                    <h2 class="p2proj-ru-text12">Курсоры для Windows</h2>
+                    <span class="p2proj-ru-text13">
                       <span>Инверсивный курсор -</span>
                       <br />
                       <span>точка с прозрачным центром</span>
                       <br />
                     </span>
-                    <div class="p-proj-container5">
+                    <div class="p2proj-ru-container5">
                       <img
                         alt="image"
                         src="public/mycursor-200h.png"
-                        class="p-proj-image2"
+                        class="p2proj-ru-image2"
                       />
-                      <button class="p-proj-button09 button">Скачать</button>
+                      <a
+                        href="https://mega.nz/folder/4Wo2AYwa#s06QNNjdczf9ZUFNhotMFw"
+                        target="_blank"
+                        rel="noreferrer noopener"
+                        class="p2proj-ru-link button"
+                      >
+                        Скачать
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="p-proj-mido">
+              <div class="p2proj-ru-mido">
                 <img
                   alt="image"
                   src="public/android-svgrepo-com.svg"
-                  class="p-proj-image3"
+                  class="p2proj-ru-image3"
                 />
-                <div class="p-proj-rn4">
-                  <div class="p-proj-a12qs-bug">
-                    <h2 class="p-proj-text16">Штуки для RN4x</h2>
-                    <span class="p-proj-text17">
+                <div class="p2proj-ru-rn4">
+                  <div class="p2proj-ru-a12qs-bug">
+                    <h2 class="p2proj-ru-text18">Штуки для RN4x</h2>
+                    <span class="p2proj-ru-text19">
                       <span>Список прошивок без бага в шторке</span>
                       <br />
                     </span>
@@ -168,7 +212,7 @@
                       href="https://disk.yandex.ru/i/vqVfpyv3qu4XjQ"
                       target="_blank"
                       rel="noreferrer noopener"
-                      class="p-proj-link button"
+                      class="p2proj-ru-link1 button"
                     >
                       Проявление (иконки дока снизу)
                     </a>
@@ -176,41 +220,46 @@
                       href="https://4pda.to/forum/index.php?act=findpost&amp;pid=115649997&amp;anchor=Spoil-115649997-2"
                       target="_blank"
                       rel="noreferrer noopener"
-                      class="p-proj-link1 button"
+                      class="p2proj-ru-link2 button"
                     >
-                      Сам список (Android 12.x only)
+                      Сам список (только Android 12.x)
                     </a>
                   </div>
-                  <div class="p-proj-miui-el13repack">
-                    <span class="p-proj-text20">
+                  <div class="p2proj-ru-miui-el13repack">
+                    <span class="p2proj-ru-text22">
                       Мой репак MIUI12.5_A10_el13_port
                     </span>
-                    <button class="p-proj-button10 button">
+                    <a
+                      href="https://mega.nz/folder/AWADDDBR#bB8kRleWTGq_TPiZR2tjXw"
+                      target="_blank"
+                      rel="noreferrer noopener"
+                      class="p2proj-ru-link3 button"
+                    >
                       Инфо + скачать
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="p-proj-third-column">
-              <div class="p-proj-this-site">
+            <div class="p2proj-ru-third-column">
+              <div class="p2proj-ru-this-site">
                 <img
                   alt="image"
                   src="public/fire-svgrepo-com.svg"
-                  class="p-proj-image4"
+                  class="p2proj-ru-image4"
                 />
-                <a href="p3-about.html" class="p-proj-navlink button">
+                <a href="p3-about-ru.html" class="p2proj-ru-navlink1 button">
                   Этот сайт). О нём здесь
                 </a>
               </div>
-              <div class="p-proj-dalshe">
+              <div class="p2proj-ru-dalshe">
                 <img
                   alt="image"
                   src="public/fire-svgrepo-com.svg"
-                  class="p-proj-image5"
+                  class="p2proj-ru-image5"
                 />
-                <div class="p-proj-container6">
-                  <h2 class="p-proj-text21">Еще</h2>
+                <div class="p2proj-ru-container6">
+                  <h2 class="p2proj-ru-text23">Еще</h2>
                   <span>Пока на этом всё, ожидайте новые проекты)</span>
                 </div>
               </div>
