--- a/p3-about-ru.html
+++ b/p3-about-ru.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>dsys1100 site - About</title>
-    <meta property="og:title" content="dsys1100 site - About" />
+    <title>p3-about-RU - dsys1100 site</title>
+    <meta property="og:title" content="p3-about-RU - dsys1100 site" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,26 +47,28 @@
   </head>
   <body>
     <div>
-      <link href="./p3-about.css" rel="stylesheet" />
+      <link href="./p3-about-ru.css" rel="stylesheet" />
 
-      <div class="p-about-container">
-        <div class="p-about-sidebar">
-          <nav class="p-about-nav">
-            <span class="p-about-text">dsys1100</span>
-            <a href="index.html" class="p-about-text01">Домашняя</a>
-            <a href="p2-proj.html" class="p-about-navlink">Мои проекты</a>
-            <span class="p-about-text02">t̷̎ͅe̛͇ͭs̼̚͢t̡̝͕̎̾͠ ͭ̀͜͏̮͎b̧̖̯͂̊̕u̟͔̙̐̎͂͘͜͢t̨̖̙̹̿͗ͮ͘͡t̸̙͚͈ͪͤ͆͘͝o̴͕͕̭͔͊̀́̚͘͟͞n̴̷͛ͭ̈ͮ͏̻͈͙̯͢</span>
+      <div class="p3about-ru-container">
+        <div class="p3about-ru-sidebar">
+          <nav class="p3about-ru-nav">
+            <span class="p3about-ru-text">dsys1100</span>
+            <a href="index.html" class="p3about-ru-text01">Домашняя</a>
+            <a href="p2-proj-ru.html" class="p3about-ru-navlink">Мои проекты</a>
+            <a href="p3-about-en.html" class="p3about-ru-navlink1">
+              EN Version
+            </a>
+            <span class="p3about-ru-text02">t̷̎ͅe̛͇ͭs̼̚͢t̡̝͕̎̾͠ ͭ̀͜͏̮͎b̧̖̯͂̊̕u̟͔̙̐̎͂͘͜͢t̨̖̙̹̿͗ͮ͘͡t̸̙͚͈ͪͤ͆͘͝o̴͕͕̭͔͊̀́̚͘͟͞n̴̷͛ͭ̈ͮ͏̻͈͙̯͢</span>
           </nav>
         </div>
-        <div class="p-about-features">
-          <div class="p-about-plani">
-            <h2 class="p-about-heading">В планах:</h2>
-            <span class="p-about-text03">
-              <span class="p-about-text04">
+        <div class="p3about-ru-features">
+          <div class="p3about-ru-plani">
+            <h2 class="p3about-ru-heading">В планах:</h2>
+            <span class="p3about-ru-text03">
+              <span class="p3about-ru-text04">
                 Бургер-меню для телефонов (из-за этого кстати выход сайта в свет
                 задержался на месяц, ибо у человека, которому я доверил/поручил
-                прикручивание этой штуки были дела), английская версия, может
-                быть темная тема.
+                прикручивание этой штуки были дела), может быть темная тема.
               </span>
               <br />
               <br />
@@ -74,49 +76,60 @@
               <br />
             </span>
           </div>
-          <div class="p-about-container1">
-            <div class="p-about-first-alpha">
-              <h2 class="p-about-heading1">
+          <div class="p3about-ru-container1">
+            <div class="p3about-ru-first-alpha">
+              <h2 class="p3about-ru-heading1">
                 <span>010101 - 29.04.23 - Первая альфа</span>
                 <br />
               </h2>
-              <span class="p-about-text11">
+              <span class="p3about-ru-text11">
                 От наброска до первой версии. Изучение конструктора сайтов
                 методом тыка, понимания что на телефонах с экранами &lt;1080
                 выглядит не очень и непонимания как это исправить.
               </span>
             </div>
-            <div class="p-about-second-beta">
-              <h2 class="p-about-heading2">
+            <div class="p3about-ru-second-beta">
+              <h2 class="p3about-ru-heading2">
                 <span>010102 - 30.04.23 - Первая бета</span>
                 <br />
               </h2>
-              <span class="p-about-text14">
+              <span class="p3about-ru-text14">
                 Изменил иконки, сместил весь текст, добавил test button и
                 содержимое в курсорах.
               </span>
             </div>
-            <div class="p-about-third-release">
-              <h2 class="p-about-heading3">010103 - 30.04.23 - Релиз?</h2>
-              <span class="p-about-text15">
+            <div class="p3about-ru-third-release">
+              <h2 class="p3about-ru-heading3">010103 - 30.04.23 - Релиз?</h2>
+              <span class="p3about-ru-text15">
                 Добавил Штуки для RN4x. Первый полностью рабочий предрелизный
                 вариант.
               </span>
             </div>
-            <div class="p-about-fourth-fu-lrelease">
-              <h2 class="p-about-heading4">010201 - 08.06.23&nbsp; - Запуск</h2>
-              <span class="p-about-text16">
+            <div class="p3about-ru-fourth-ful-lrelease">
+              <h2 class="p3about-ru-heading4">
+                010201 - 08.06.23&nbsp; - Запуск
+              </h2>
+              <span class="p3about-ru-text16">
                 Изменены папки и файлы сайта, добавлен ченжлог и некоторая
                 информация по сайту, выход в свет по адресу dsys1100.github.io
               </span>
             </div>
-            <div class="p-about-fiveth-icons-links">
-              <h2 class="p-about-heading5">
+            <div class="p3about-ru-fiveth-icons-links">
+              <h2 class="p3about-ru-heading5">
                 010202 - 07.07.23&nbsp; - МикроИзменения
               </h2>
-              <span class="p-about-text17">
+              <span class="p3about-ru-text17">
                 Изменены иконки, добавлены недостающие хар-ки ноута и ссылки на
                 меня.
+              </span>
+            </div>
+            <div class="p3about-ru-sixth-info-link">
+              <h2 class="p3about-ru-heading6">
+                010203 - 31.08.23&nbsp; - Изменения
+              </h2>
+              <span class="p3about-ru-text18">
+                Английская версия, еще больше информации обо мне, изменение в
+                устройствах, добавил недостающие ссылки на кнопках.
               </span>
             </div>
           </div>
